--- a/onetam.css
+++ b/onetam.css
@@ -320,7 +320,7 @@
       .project-screenshot {
         width: 100%;
         height: 220px;
-        background: var(--gradient);
+        background: black;
         position: relative;
         overflow: hidden;
         display: flex;
@@ -594,7 +594,7 @@
       .about-text p {
         margin-bottom: 1.5rem;
         line-height: 1.7;
-        color: var(--secondary);
+        color:black;
       }
 
       /* Responsive Design for About Section */
